<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width ="match_parent"
    android:layout_height ="wrap_content"
    android:layout_gravity = "center_vertical"
    android:orientation = "vertical">

    <TextView
        android:id="@+id/txtNome"
        android:text="@string/txtNome"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_width ="wrap_content"
        android:layout_height ="wrap_content"/>

    <EditText
        android:id="@+id/edtNome"
        android:textSize="30sp"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/txtNomeMsg"
        android:layout_gravity = "center_horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtEndereco"
        android:text="@string/txtEndereco"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_width ="wrap_content"
        android:layout_height ="wrap_content"/>

    <EditText
        android:id="@+id/edtEndereco"
        android:textSize="30sp"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/txtEnderecoMsg"
        android:layout_gravity = "center_horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtBairro"
        android:text="@string/txtBairro"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_width ="wrap_content"
        android:layout_height ="wrap_content"/>

    <EditText
        android:id="@+id/edtBairro"
        android:textSize="30sp"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/txtBairroMsg"
        android:layout_gravity = "center_horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtCep"
        android:text="@string/txtCep"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_width ="wrap_content"
        android:layout_height ="wrap_content"/>

    <EditText
        android:id="@+id/edtCep"
        android:textSize="30sp"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/txtCepMsg"
        android:layout_gravity = "center_horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtCidade"
        android:text="@string/txtCidade"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_width ="wrap_content"
        android:layout_height ="wrap_content"/>

    <EditText
        android:id="@+id/edtCidade"
        android:textSize="30sp"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/txtCidadeMsg"
        android:layout_gravity = "center_horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtEstado"
        android:text="@string/txtEstado"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_width ="wrap_content"
        android:layout_height ="wrap_content"/>

    <EditText
        android:id="@+id/edtEstado"
        android:textSize="30sp"
        android:inputType="text"
        android:autofillHints="name"
        android:hint="@string/txtEstadoMsg"
        android:layout_gravity = "center_horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCadastrar"
        android:text="@string/btnCadastrar"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>